# trade

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: backtest.yaml  base.yaml  live.yaml  paper.yaml
docs/: dev-setup-ubuntu.md
scripts/: compute_features.py  init_db.py  load_history.py  run_live_feed.py
src/: __init__.py  constants.py  main.py
src/backtest/: __init__.py
src/common/: __init__.py  config.py  env.py  logging.py  time.py  types.py
src/data/: __init__.py  validation.py
src/data/features/: __init__.py  calendar.py  indicators.py  orderbook.py  pipeline.py  price.py  regime.py  volume.py
src/data/ingestion/: __init__.py  backfill.py  bybit_rest.py  bybit_ws.py  crossasset.py  macro.py
src/data/storage/: __init__.py  schema.sql  timescale.py
src/decision/: __init__.py
src/execution/: __init__.py
src/intelligence/: __init__.py
src/intelligence/models/: __init__.py
src/intelligence/regime/: __init__.py
src/intelligence/scanner/: __init__.py
src/intelligence/strategies/: __init__.py
src/learning/: __init__.py
src/monitoring/: __init__.py
tests/: conftest.py
tests/integration/: conftest.py  test_timescale.py
tests/unit/: test_constants.py  test_main.py
tests/unit/common/: test_config.py  test_time.py  test_types.py
tests/unit/data/: test_backfill.py  test_crossasset.py  test_features.py  test_validation.py
