[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingbot"
version = "0.1.0"
description = "Autonomous self-learning trading bot (Bybit spot). See CLAUDE.md."
readme = "README.md"
requires-python = "==3.11.*"          # Spec Section 6.4.4 pins 3.11 for dev-prod parity
license = { text = "Proprietary" }

# Core runtime dependencies — always installed by `make install`.
# The heavy ML stack lives in the [ml] extra (installed from Phase 4 onward) so
# early-phase installs stay fast; the backup stack lives in [backup].
dependencies = [
    "ccxt>=4.3",                       # unified exchange API (portability)
    "pybit>=5.7",                      # Bybit native (performance)
    "pandas>=2.2",
    "polars>=1.0",                     # hot paths
    "numpy>=1.26,<2.0",                # <2.0 for ML-stack ABI compatibility
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",            # TimescaleDB connection
    "pydantic>=2.7",
    "pydantic-settings>=2.3",          # validated config from env + YAML
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",                 # structured JSON logs
    "tenacity>=8.4",                   # retry w/ exponential backoff + jitter
    "httpx>=0.27",
    "websockets>=12.0",
    "python-telegram-bot>=21.0",       # async Telegram (Section 19.2.6)
    "pyotp>=2.9",                      # TOTP for critical-command 2FA
    "fastapi>=0.111",                  # dashboard backend
    "uvicorn[standard]>=0.30",
    "prometheus-client>=0.20",
    "yfinance>=0.2.40",                # cross-asset regime data (Section 15.1)
]

[project.optional-dependencies]
# Machine-learning stack — needed from Phase 4 (strategies & models) onward.
# Installed via `make install-all`. All are standard x86_64 Linux wheels.
ml = [
    "torch>=2.2",                      # LSTM / attention (CPU wheel on the droplet)
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "stable-baselines3>=2.3",          # PPO / SAC
    "hmmlearn>=0.3",                   # regime detection (Section 15)
    "scikit-learn>=1.4",
    "scipy>=1.13",
    "pandas-ta>=0.3.14b",              # indicators
    "TA-Lib>=0.4.28",                  # requires system libta-lib (see docs)
    "scikit-optimize>=0.10",           # Bayesian strategy evolution (Section 14.3)
]
# Nightly backup to DigitalOcean Spaces (Section 22.6). Needed from Phase 8.
backup = ["boto3>=1.34"]
# Optional macro data (Section 8.4, FRED).
macro = ["fredapi>=0.5"]
# Developer tooling — installed by `make install`.
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",               # property-based tests for risk logic
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "types-PyYAML",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# Sensible, safety-oriented default rule set.
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# Test names may deviate from conventions; SIM300 misfires on `attr == Decimal(lit)`
# where `actual == expected` is the conventional, readable assertion order.
"tests/*" = ["N802", "N803", "SIM300"]

[tool.mypy]
python_version = "3.11"
strict = true                          # Spec Section 6.1 / 21.1: mypy --strict everywhere
# The ML-library override sections below are intentionally ahead of their imports
# (those land in Phase 4+), so don't warn that they're currently unused.
warn_unused_configs = false
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Third-party libraries without type stubs — do not fail strict mode on them.
module = [
    "ccxt.*", "pybit.*", "yfinance.*", "pandas_ta.*", "talib.*",
    "hmmlearn.*", "stable_baselines3.*", "sklearn.*", "skopt.*",
    "lightgbm.*", "xgboost.*", "prometheus_client.*", "boto3.*", "fredapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "fast: quick unit tests suitable for pre-commit (deselect with '-m \"not fast\"')",
    "integration: multi-module flows, may touch the database",
    "property: Hypothesis-based property tests",
    "backtest: runs strategies against historical data (slow)",
]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
